--- a/backend-cinema-java/pom.xml
+++ b/backend-cinema-java/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
+	<parent> 
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.2.5</version> 
@@ -61,7 +61,7 @@
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-impl</artifactId>
-			<version>0.11.5</version>
+			<version>0.11.5</version> 
 		</dependency>
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
@@ -96,13 +96,18 @@
 			<scope>test</scope>
 		</dependency>
 
-	<dependency>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-devtools</artifactId>
-    <optional>true</optional>
-</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
+
+	<!-- <modules>
+		<module>com.microsoft.java.debug.core</module>
+		<module>com.microsoft.java.debug.plugin</module>
+		<module>com.microsoft.java.debug.repository</module>
+	</modules> -->
 
 	<build>
 		<plugins>
@@ -116,9 +121,12 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+					<!-- <mainClass>com.cinema.sso.CinemaBackend</mainClass> -->
 				</configuration>
 			</plugin>
 		</plugins>
-	</build>
+	</build> 
+
+	<!-- <packaging>pom</packaging> -->
 
 </project>
