--- a/backend-cinema-java/pom.xml
+++ b/backend-cinema-java/pom.xml
@@ -18,11 +18,11 @@
 	</properties>
 	<dependencies>
 
-		<dependency>
+		<!-- <dependency>
         <groupId>org.springdoc</groupId>
         <artifactId>springdoc-openapi-ui</artifactId>
         <version>1.6.14</version> 
-    </dependency> 
+    </dependency>  -->
   
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -68,12 +68,6 @@
 			<artifactId>jjwt-jackson</artifactId>
 			<version>0.11.5</version>
 		</dependency>
-
-		<!-- <dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
-		</dependency> -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
@@ -101,16 +95,18 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.1.0</version>
+		</dependency>
 	</dependencies>
 
-	<!-- <modules>
-		<module>com.microsoft.java.debug.core</module>
-		<module>com.microsoft.java.debug.plugin</module>
-		<module>com.microsoft.java.debug.repository</module>
-	</modules> -->
+ 
 
-	<build>
-		<plugins>
+	<build> 
+		<plugins>  
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -121,12 +117,10 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
-					<!-- <mainClass>com.cinema.sso.CinemaBackend</mainClass> -->
 				</configuration>
 			</plugin>
 		</plugins>
 	</build> 
 
-	<!-- <packaging>pom</packaging> -->
 
 </project>
